@@ -226,7 +226,7 @@ public class DenormalizedJsonConverter {
 
   private void mapIssues(EventJsonRecord.Builder builder) {
     JsonConverter.mapIssues(
-        Arrays.asList(metadata, eventCore, temporal, location, multimedia),
+        List.of(metadata, eventCore, temporal, location, multimedia),
         builder::setIssues,
         builder::setNotIssues);
   }
